Fix alignment of logo

--- a/app/assets/stylesheets/custom2.scss
+++ b/app/assets/stylesheets/custom2.scss
@@ -136,6 +136,12 @@ header nav .brand-logo img {
 	padding: 15px;
 }
 
+header nav .mobile.brand-logo img {
+  margin-left: -30px;
+  margin-top: 4px;
+}
+
+
 /* Navbar */
 header nav .navbar-header {
 	height: 70px;
@@ -372,6 +378,7 @@ header nav #top-nav hr {
 		background: #fff image-url('bg7.jpg') center/cover no-repeat;
 		// background: #fff image-url('bg5.jpg') center/cover no-repeat;
 		padding: 30px 0;
+		height: 100vh;
 	}
 }
 
