--- a/app/assets/stylesheets/frontpage.scss
+++ b/app/assets/stylesheets/frontpage.scss
@@ -603,6 +603,7 @@ header nav #top-nav hr {
 
 #section-main.mobile-main {
 	min-height: initial;
+	height: 100vh;
 }
 
 .mobile-main .get-started-btn {
